Fixed body overflow and hover colours

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
 	font-size: 100%;
+	overflow-y:hidden;
 }
 
 .clip-svg {
@@ -18,7 +19,7 @@ body {
 
 .left {
 	left: 0;
-	background-color: #eee;
+	background-color: #f7f7f7;
 }
 
 .right {
@@ -57,15 +58,17 @@ nav ul li {
 }
 
 nav ul li:hover {
-	background-color: yellow;
+	/*background-color: yellow;*/
+	color: #ee3176;
+	font-style: italic;
 }
 
 h2 {
-	font-family: Helvetica, sans serif;
-	font-size: 3em;
+	font-family: Georgia, serif;
+	font-size: 2em;
 	font-weight: lighter;
-	margin-top: 15px;
-	/*color: navy;*/
+	margin-top: -20px;
+	color: #ee3176;
 }
 
 /*.fa-arrow-left {
@@ -73,13 +76,6 @@ h2 {
 	background-color: yellow;
 }
 */
-/*.circle {
-  height: 200px;
-  width: 200px;
-  background-color: #555;
-  border-radius: 50%;
-  margin: auto;
-}*/
 
 .clip {
   clip-path: circle(160px at center);
@@ -88,7 +84,8 @@ h2 {
 .social {
 	/*background-color: yellow;*/
 	text-align: center;
-	margin: auto;
+	margin-top: 30px;
+	/*right: 0;*/
 	/*width: auto;*/
 }
 
@@ -102,7 +99,7 @@ h2 {
 .fa-linkedin-in:hover, 
 .fa-codepen:hover {
 	margin: 10px;
-	color: yellow;
+	color: #ee3176;
 }
 
 img {
